# verdigris

./: Cargo.toml  LICENSE  README.md  notes
src/: instruction.rs  lexer.rs  main.rs  vm.rs
src/repl/: mod.rs  repl_asm.rs
src/vm/: instruction.rs  mod.rs  vm.rs
vdg-oxidizer/: Cargo.toml  README.md  opcode-ref
vdg-oxidizer/src/: lib.rs
vdg-oxidizer/src/assembler/: assembler.rs  lexer.rs  mod.rs  parser.rs
vdg-oxidizer/src/repl/: lexer.rs  mod.rs  repl_asm.rs
vdg-oxidizer/src/vm/: instruction.rs  mod.rs  vm.rs
